--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-*.iml
 .gradle
 /local.properties
 /.idea/caches
@@ -12,3 +11,9 @@
 /captures
 .externalNativeBuild
 .cxx
+
+# related
+*.iml
+*.ipr
+*.iws
+.idea/
