--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Index">
-        </activity>
-        <activity android:name="com.example.contratos.activitys.RegistroOrdenes">
-        </activity>
+        <activity android:name="com.example.Index"/>
+        <activity android:name="com.example.contratos.activitys.RegistroOrdenes"/>
         <activity android:name="com.example.inventario.DetalleProducto"/>
         <activity android:name="com.example.inventario.ListaProductos"/>
         <activity android:name="com.example.activity.AboutUsActivity"/>
@@ -20,14 +18,13 @@
         <activity android:name="com.example.activity.ProfileActivity"/>
         <activity android:name="com.example.inventario.CategoriaBeans"/>
         <activity android:name="com.example.inventario.ProductoBeans"/>
-        <activity android:name="com.example.inventario.ContentInventario">
+        <activity android:name="com.example.inventario.ContentInventario"/>
+        <activity android:name="com.example.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="com.example.LoginActivity"/>
 
         <meta-data
                 android:name="preloaded_fonts"
