--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'com.android.application'
     }
 
   dependencies {
-    implementation fileTree (dir: "libs", include: ["*.jar"])
+      implementation fileTree (dir: "libs", include: ["*.jar"])
       implementation 'androidx.appcompat:appcompat:1.2.0'
       implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
       implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -31,4 +31,5 @@ apply plugin: 'com.android.application'
       androidTestImplementation 'androidx.test.ext:junit:1.1.2'
       androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
       implementation 'com.google.android.material:material:1.1.0'
+      implementation 'de.hdodenhof:circleimageview:2.1.0'
   }
