--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ apply plugin: 'com.android.application'
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
     }
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
     }
 
   dependencies {
